[gd_scene load_steps=23 format=2]

[ext_resource path="res://level5res/Mundo5.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/simple_daytime.png" type="Texture" id=2]
[ext_resource path="res://cannon_cart.tscn" type="PackedScene" id=3]
[ext_resource path="res://floor.tscn" type="PackedScene" id=4]
[ext_resource path="res://pipe.tscn" type="PackedScene" id=5]
[ext_resource path="res://level_cleared_window.tscn" type="PackedScene" id=6]
[ext_resource path="res://reset_exit_window.tscn" type="PackedScene" id=7]
[ext_resource path="res://level5res/trash_trays.gd" type="Script" id=8]
[ext_resource path="res://sprites/saw/metal_saw.png" type="Texture" id=9]
[ext_resource path="res://sprites/saw/mount.png" type="Texture" id=10]
[ext_resource path="res://sprites/wood/h_wood_plank_2.png" type="Texture" id=11]
[ext_resource path="res://fonts/montserrat_24.tres" type="DynamicFont" id=12]
[ext_resource path="res://Tools/MouseSpawner.tscn" type="PackedScene" id=13]
[ext_resource path="res://level5res/Time.gd" type="Script" id=14]
[ext_resource path="res://sprites/speech_bubble/speech_bubble.png" type="Texture" id=15]
[ext_resource path="res://level5res/speech_bubble.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 236.435, 32.0237 )

[sub_resource type="CircleShape2D" id=3]
radius = 7.00131

[sub_resource type="Animation" id=4]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 0.01
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 132.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
scale = 4.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="Mundo5" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="cannon_cart" parent="." instance=ExtResource( 3 )]

[node name="floor" parent="." instance=ExtResource( 4 )]

[node name="pipe" parent="." instance=ExtResource( 5 )]
rotation = 0.74002
z_index = 0

[node name="level_cleared_window" parent="." instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="reset_exit_window" parent="." instance=ExtResource( 7 )]
pause_mode = 2
visible = false
margin_left = 535.79
margin_top = 306.14
margin_right = 535.79
margin_bottom = 306.14

[node name="trash_trays" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 1195.48, 537.52 )
rotation = 0.523599
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 8 )
objetive = 1000

[node name="tray_1" type="StaticBody2D" parent="trash_trays"]
position = Vector2( -16.06, 0 )

[node name="saw_sprite" type="Sprite" parent="trash_trays/tray_1"]
editor/display_folded = true
position = Vector2( 114.48, -89.38 )
rotation = -0.228846
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="trash_trays/tray_1/saw_sprite"]
autoplay = "spin"
anims/spin = SubResource( 1 )

[node name="saw_mount" type="Sprite" parent="trash_trays/tray_1"]
position = Vector2( 114.243, -90.0964 )
scale = Vector2( 0.885573, 0.541257 )
texture = ExtResource( 10 )

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_1"]
texture = ExtResource( 11 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_1"]
position = Vector2( 1.73193, -1 )
shape = SubResource( 2 )

[node name="saw_area_1" type="Area2D" parent="trash_trays/tray_1"]

[node name="area_shape" type="CollisionShape2D" parent="trash_trays/tray_1/saw_area_1"]
position = Vector2( 114.69, -91.25 )
scale = Vector2( 6.5, 6.5 )
shape = SubResource( 3 )

[node name="Value" type="Label" parent="trash_trays/tray_1"]
margin_left = -214.64
margin_top = -12.59
margin_right = -174.64
margin_bottom = 18.41
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "50"

[node name="tray_2" type="StaticBody2D" parent="trash_trays"]
position = Vector2( -203.49, -314.27 )

[node name="saw_sprite" type="Sprite" parent="trash_trays/tray_2"]
editor/display_folded = true
position = Vector2( 114.48, -89.38 )
rotation = -0.228846
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="trash_trays/tray_2/saw_sprite"]
autoplay = "spin"
anims/spin = SubResource( 4 )

[node name="saw_mount" type="Sprite" parent="trash_trays/tray_2"]
position = Vector2( 114.243, -90.0964 )
scale = Vector2( 0.885573, 0.541257 )
texture = ExtResource( 10 )

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_2"]
texture = ExtResource( 11 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_2"]
position = Vector2( 1.73193, -1 )
shape = SubResource( 2 )

[node name="saw_area_2" type="Area2D" parent="trash_trays/tray_2"]

[node name="area_shape" type="CollisionShape2D" parent="trash_trays/tray_2/saw_area_2"]
position = Vector2( 114.69, -91.25 )
scale = Vector2( 6.5, 6.5 )
shape = SubResource( 3 )

[node name="Value2" type="Label" parent="trash_trays/tray_2"]
margin_left = -213.33
margin_top = -15.07
margin_right = -173.33
margin_bottom = 15.93
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "75"

[node name="tray_3" type="StaticBody2D" parent="trash_trays"]
position = Vector2( -375.11, -617.05 )

[node name="saw_sprite" type="Sprite" parent="trash_trays/tray_3"]
editor/display_folded = true
position = Vector2( 114.48, -89.38 )
rotation = -0.228846
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="trash_trays/tray_3/saw_sprite"]
autoplay = "spin"
anims/spin = SubResource( 5 )

[node name="saw_mount" type="Sprite" parent="trash_trays/tray_3"]
position = Vector2( 114.243, -90.0964 )
scale = Vector2( 0.885573, 0.541257 )
texture = ExtResource( 10 )

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_3"]
texture = ExtResource( 11 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_3"]
position = Vector2( 1.73193, -1 )
shape = SubResource( 2 )

[node name="saw_area_3" type="Area2D" parent="trash_trays/tray_3"]

[node name="area_shape" type="CollisionShape2D" parent="trash_trays/tray_3/saw_area_3"]
position = Vector2( 114.69, -91.25 )
scale = Vector2( 6.5, 6.5 )
shape = SubResource( 3 )

[node name="Value3" type="Label" parent="trash_trays/tray_3"]
margin_left = -213.94
margin_top = -15.23
margin_right = -173.94
margin_bottom = 15.77
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"

[node name="trash_destruction" type="Particles2D" parent="trash_trays"]
rotation = -0.523599
scale = Vector2( 2, 2 )
emitting = false
amount = 20
one_shot = true
speed_scale = 2.47
explosiveness = 0.76
process_material = SubResource( 6 )

[node name="MouseSpawner" parent="." instance=ExtResource( 13 )]

[node name="Points" type="Label" parent="."]
margin_left = 143.0
margin_top = 5.25
margin_right = 265.0
margin_bottom = 36.25
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Puntos: 0"

[node name="Time" type="Label" parent="."]
editor/display_folded = true
margin_left = 143.0
margin_top = 44.33
margin_right = 253.0
margin_bottom = 75.33
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Tiempo: "
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="Time"]
wait_time = 300.0
one_shot = true
autostart = true

[node name="speech_bubble" type="Sprite" parent="."]
position = Vector2( 817.34, 131.98 )
texture = ExtResource( 15 )
script = ExtResource( 16 )

[node name="Label" type="Label" parent="speech_bubble"]
margin_left = -243.0
margin_top = -79.0
margin_right = 220.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objetivo: Destrueye basura en las
sierras para recolectar 1000 puntos
antes de que se termine el tiempo.
Cada sierra da diferente puntaje."

[node name="Timer" type="Timer" parent="speech_bubble"]
wait_time = 10.0
one_shot = true
autostart = true
[connection signal="body_entered" from="trash_trays/tray_1/saw_area_1" to="trash_trays" method="_on_saw_area_1_body_entered"]
[connection signal="body_entered" from="trash_trays/tray_2/saw_area_2" to="trash_trays" method="_on_saw_area_2_body_entered"]
[connection signal="body_entered" from="trash_trays/tray_3/saw_area_3" to="trash_trays" method="_on_saw_area_3_body_entered"]
[connection signal="timeout" from="Time/Timer" to="Time" method="_on_Timer_timeout"]
[connection signal="timeout" from="speech_bubble/Timer" to="speech_bubble" method="_on_Timer_timeout"]
